--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,8 @@
     <script src="%PUBLIC_URL%/elegant/assets/node_modules/jquery/jquery-3.2.1.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
     <script src="%PUBLIC_URL%/elegant/assets/node_modules/popper/popper.min.js"></script>
+    <!-- Bootstrap tether Core JavaScript -->
+    <script src="%PUBLIC_URL%/elegant/assets/node_modules/popper/popper.min.js"></script>
     <script src="%PUBLIC_URL%/elegant/assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
     <script src="%PUBLIC_URL%/elegant/html/dist/js/perfect-scrollbar.jquery.min.js"></script>
